# ADFIR_clustering_dashboard

./: README.md  generate_score_comparison_excel.py  metodika.md  pyproject.toml
dashboard/: app.py  clustering_service.py  data_loader.py  dendrogram_runtime.py  exporters.py  grid_helpers.py  live_plotly_component.py  metodika.md  plots.py  ui_helpers.py
dashboard/components/live_plotly/: component.js  index.html
data/dashboard_exports/Magnet_CTF_2019_Windows_Desktop/max/60s/clustering/agglomerative/: cluster_score_comparison__v1.xlsx
data/dashboard_exports/Magnet_CTF_2019_Windows_Desktop/sum/60s/clustering/agglomerative/: cluster_score_comparison__v1.xlsx
data/dashboard_exports/Magnet_CTF_2022_Windows_Laptop/max/60s/clustering/agglomerative/: cluster_score_comparison__v1.xlsx
data/dashboard_exports/Magnet_CTF_2022_Windows_Laptop/sum/60s/clustering/agglomerative/: cluster_score_comparison__v1.xlsx  cut_candidates__v1.csv  cut_ranking_behavior_prompt__v1.txt  cut_ranking_incident__v1.csv  cut_ranking_incident_prompt__v1.txt  cut_ranking_prompt__v1.txt  cut_ranking_stable__v1.csv  forensic_candidates__v1.csv  forensic_candidates_behavior_prompt__v1.txt  forensic_candidates_incident_prompt__v1.txt  forensic_candidates_prompt__v1.txt  forensic_cluster_phase_summary__v1.csv  forensic_selected_cuts__v1.csv  forensic_validation_prompt__v1.txt  forensic_validation_rows__v1.csv
data/dashboard_exports/Magnet_CTF_2022_Windows_Laptop/sum/60s/dashboard/agglomerative/: cluster_features_top10_long__v1.csv  cluster_summary_long__v1.csv  dashboard_manifest__v1.json  (+1 more)
(+2126 files in other folders)
