[project]
name = "adfir-cluster-dashboard"
version = "0.1.0"
description = "Standalone Streamlit dashboard for precomputed ADFIR cluster exports."
readme = "README.md"
requires-python = ">=3.11,<3.14"
dependencies = [
    "altair>=5,<7",
    "matplotlib>=3.9,<4",
    "openpyxl>=3.1,<4",
    "pandas>=2.2,<3",
    "plotly>=6.6.0",
    "pyarrow>=23.0.1",
    "scipy>=1.13,<2",
    "streamlit>=1.52.2",
    "streamlit-aggrid>=1.1.8",
]

[tool.uv]
package = false
